--- a/Assets/Pages/Explore/Delicacies.html
+++ b/Assets/Pages/Explore/Delicacies.html
@@ -42,20 +42,111 @@
             <section class="categories">
                 <p>Contents:</p>
                 <div class="category-btn-cont">
-                    <a href="#" class="category-btn"></a>
-                    <a href="#" class="category-btn"></a>
-                    <a href="#" class="category-btn"></a>
+                    <a href="#BukoPie" class="category-btn"></a>
+                    <a href="#Espasol" class="category-btn"></a>
+                    <a href="#KesongPuti" class="category-btn"></a>
+                    <a href="#Puto" class="category-btn"></a>
+                    <a href="#MonayBae" class="category-btn"></a>
+                    <a href="#BibingkaMakapuno" class="category-btn"></a>
+                    <a href="#Uraro" class="category-btn"></a>
                 </div>
             </section>
 
             <section class="container">
                 <div class="mainboard">
-                    <div class="content-cont"></div>
+                    <div class="content-div" id="BukoPie">
+                        <img src="" alt="Buko Pie" class="content-img">
+                        <h1>Buko Pie</h1>
+                        <p>
+                            Buko Pie is a super yummy dessert! It's made with soft coconut and a creamy filling inside a crispy, buttery crust. 
+                            It's a popular snack or after-dinner treat in the Philippines!
+                            <br><br>
+                            People often bring it home as a gift, especially from Laguna, where it first started. Colette's and Lety's shops 
+                            are really famous for selling this tasty pie, but they didn't invent it.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="Espasol">
+                        <img src="" alt="Espasol" class="content-img">
+                        <h1>Espasol</h1>
+                        <p>
+                            Espasol is a yummy rice cake made with rice flour and coconut milk. It comes from Laguna and you can find it 
+                            at bus stops and gift shops.
+                            <br><br>
+                            Just like other popular rice treats, there are lots of ways to make Espasol. I'll share a simple recipe with you. 
+                            Say goodbye to your cravings and let's make some delicious Espasol!
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="KesongPuti">
+                        <img src="" alt="Kesong Puti" class="content-img">
+                        <h1>Kesong Puti</h1>
+                        <p>
+                            Kesong puti is a soft, white cheese from the Philippines. It's made from carabao milk and salt, and it's 
+                            curdled with vinegar, citrus juices, or rennet. Sometimes, it's made from goat or cow milk. It tastes a little 
+                            salty and tangy. Depending on how it's made, it can be like queso blanco or buffalo mozzarella. It can be very moist 
+                            or firm. People eat it alone, with bread like pandesal, or in different Filipino dishes.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="Puto">
+                        <img src="" alt="Puto" class="content-img">
+                        <h1>Puto</h1>
+                        <p>
+                            Puto, also known as Putong Bigas, is a classic Filipino steamed rice cake made from rice dough called galapong. 
+                            It's often called putong puti, meaning "white puto," because it's very white in color. 
+                            It's one of the most loved types of puto in the Philippines.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="MonayBae">
+                        <img src="" alt="Monay Bae" class="content-img">
+                        <h1>Monay Bae</h1>
+                        <p>
+                            Bay's monay stands out among other bread varieties because it's bigger and less sweet. 
+                            Its crust is smooth and doesn't have any glaze, and it contains a few raisins that add unique flavors. 
+                            Each bite is delicious and unmatched. If you're interested in trying it, you can also buy it at Tenorio&#39;s Bakery 
+                            on Rizal Avenue in Bay Laguna.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="BibingkaMakapuno">
+                        <img src="" alt="Bibingka Makapuno" class="content-img">
+                        <h1>Bibingka Makapuno</h1>
+                        <p>
+                            Bibingka Macapuno is a delightful Filipino delicacy that combines the traditional bibingka—a type of rice 
+                            cake—with macapuno, which are soft, jelly-like coconut strings. This dessert is known for its slightly chewy 
+                            texture and mildly sweet taste, often enjoyed during the Christmas season and other festive occasions.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="Uraro">
+                        <img src="" alt="Uraro" class="content-img">
+                        <h1>Uraro</h1>
+                        <p>
+                            Uraro cookies are a Filipino delicacy crafted from arrowroot flour, butter, and eggs. 
+                            These treats melt in your mouth and are ideal for a quick snack during the day. They pair wonderfully with a 
+                            cup of coffee or tea!
+                            <br><br>
+                            In Southern Luzon, especially in the region of Liliw, these cookies are known as galletas de liliw 
+                            and are a local specialty. They have a soft, powdery texture that dissolves effortlessly and a rich, 
+                            buttery flavor. Typically, they come in different shapes like circles, stars, or flowers.
+                        </p>
+                    </div>
                 </div>
+
                 <div class="side-panel">
                     <div class="content-wrapper">
                         <p>Contents:</p>
-                        <div class="content-cont"></div>
+                        <div class="content-cont">
+                            <a href="#BukoPie" class="content bukopie"><p>Buko Pie</p></a>
+                            <a href="#Espasol" class="content espasol"><p>Espasol</p></a>
+                            <a href="#KesongPuti" class="content kesongputi"><p>Kesong Puti</p></a>
+                            <a href="#Puto" class="content puto"><p>Puto</p></a>
+                            <a href="#MonayBae" class="content monaybae"><p>Monay Bae</p></a>
+                            <a href="#BibingkaMakapuno" class="content bibingkamakapuno"><p>Bibingka Makapuno</p></a>
+                            <a href="#Uraro" class="content uraro"><p>Uraro</p></a>
+                        </div>
                     </div>
                 </div>
             </section>
