--- a/Assets/Pages/Explore/HistoricalSites.html
+++ b/Assets/Pages/Explore/HistoricalSites.html
@@ -30,24 +30,102 @@
 
         <main>
             <section class="head-section">
-                <h1></h1>
-                <p></p>
+                <h1>Historical Sites</h1>
+                <p>
+                    A historical site typically represents a location with high cultural, historical, architectural, or archaeological significance. 
+                    These places frequently contain visible evidence of past human activity, such as structures, ruins, artifacts, or landmarks. 
+                    They act as physical reminders of the events, people, and cultures that influenced the region's history. 
+                </p>
             </section>
 
             <section class="categories">
                 <p>Contents:</p>
                 <div class="category-btn-cont">
-                    <a href="#" class="category-btn"></a>
-                    <a href="#" class="category-btn"></a>
-                    <a href="#" class="category-btn"></a>
+                    <a href="#" class="category-btn">Jose Rizal Shrine</a>
+                    <a href="#" class="category-btn">Banga</a>
+                    <a href="#" class="category-btn">Saint John the Baptist Parish Church</a>
+                    <a href="#" class="category-btn">Tallest Monument of Rizal</a>
                 </div>
             </section>
 
             <section class="container">
                 <div class="mainboard">
-                    <div class="content-cont"></div>
+                    <div class="content-div" id="RizalShrine">
+                        <img src="../../Images/Explore/RizalShrine.jpg" alt="Rizal Shrine" class="content-img">
+                        <h1>Jose Rizal Shrine</h1>
+                        <p>
+                            Within walking distance of Calamba's central square and church, a replica stands of the house where the Philippine 
+                            hero Jose Rizal was born in 1861. Rizal, a man of many talents, grew up in this two-story stone house. 
+                            The home featured a grand living room, a library, and several bedrooms. Outside, a garden bloomed with fruit trees 
+                            Rizal remembered fondly. Sadly, the original house was destroyed due to a land conflict. The replica we see today was 
+                            built in 1950, thanks to donations from schoolchildren.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="Banga">
+                        <img src="../../Images/Explore/Banga.JPG" alt="Giant Clay Pot" class="content-img">
+                        <h1>Giant Clay Pot / Banga</h1>
+                        <p>
+                            From the Rizal Shrine's window, you can see a big clay pot in Calamba. It was built in 1937 and tells the story of 
+                            how the town got its name. The pot is really tall, 12 meters high, and has the names of Calamba's neighborhoods 
+                            written on it. Long ago, people said the town's name came from "Kalan" and "Banga," which mean clay stove and clay pot. 
+                            This is because there was a lot of good clay by the lake, which people used for making pottery. 
+                            So, the clay pot became the symbol of the city.
+                            <br><br>
+                            The Banga of Calamba is the biggest clay pot in the world, and it's in the city plaza. 
+                            It has a map showing all the neighborhoods. It looks like natural clay, which makes it seem real. 
+                            People can climb up it, take pictures, and have a great time visiting Calamba. After seeing the big pot, 
+                            you can walk a little to see the house where Dr. Jose P. Rizal, the national hero of the Philippines, lived. 
+                            It's right next to the clay pot.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="Church">
+                        <img src="../../Images/Explore/SaintJohnTheBaptistChurch.jpg" alt="Saint John the Baptist Parish Church" class="content-img">
+                        <h1>Saint John the Baptist Parish Church</h1>
+                        <p>
+                            If you're visiting Laguna province, make sure to stop by Calamba city. It's special because our national hero, 
+                            Dr. Jose Rizal, grew up there. When he was young, he lived there and played with his friends.
+                            <br><br>
+                            One place you must visit is the St. John the Baptist Parish Church. It's really old, more than a hundred years! 
+                            Jose Rizal was baptized there on June 22, 1861. Inside, you can see the record of his baptism, which is very important. 
+                            The church got damaged during World War II, but it got fixed and looks great now. 
+                            People still go there for mass every day, so if you're nearby, you can join and think about our hero.
+                            <br><br>
+                            You can find the church on the corner of Mercado and JP Rizal Streets, just across from the Rizal Shrine. 
+                            It was built in the 19th century, and it's where Jose Rizal was baptized, just a few days after he was born.
+                        </p>
+                    </div>
+
+                    <div class="content-div" id="RizalMonument">
+                        <img src="../../Images/Explore/RizalMonument.jpg" alt="Tallest Monument of Rizal" class="content-img">
+                        <h1>Tallest Monument of Rizal</h1>
+                        <p>
+                            About one and a half months before June 19, 2011, a big statue made by Roces was carefully put on a special 
+                            base in front of our Calamba City Hall. The base was in a new area the city got, which was about 6.7 hectares. 
+                            The statue itself was 22 feet tall. With the base and steps, it was 43 feet tall and weighed around 2 tons.
+                            <br><br>
+                            On a rainy morning of June 19, everyone in the city came together to honor our important part in Philippine history. 
+                            President Benigno S. Aquino III was there, and with excitement and the Calamba song playing softly, he showed our 
+                            respectful gift to our famous fellow citizen, Jose Rizal. This new statue of Rizal isn't just a place 
+                            tourists and history lovers can visit, but it might also become a special place for people from all over the 
+                            world who admire Rizal's ideas and writings. It might even be recognized officially as the tallest Rizal statue 
+                            in the world.
+                        </p>
+                    </div>
                 </div>
-                <div class="side-panel"></div>
+                
+                <div class="side-panel">
+                    <div class="content-wrapper">
+                        <p>Contents:</p>
+                        <div class="content-cont">
+                            <a href="#RizalShrine" class="content rizalShrine"><p>Rizal Shrine</p></a>
+                            <a href="#Banga" class="content banga"><p>Banga</p></a>
+                            <a href="#Church" class="content church"><p>St. John the Baptist Church</p></a>
+                            <a href="#RizalMonument" class="content rizalMonument"><p>Rizal Monument</p></a>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
 
