--- a/Assets/Pages/Explore/Folklore.html
+++ b/Assets/Pages/Explore/Folklore.html
@@ -69,7 +69,7 @@
                             Some people may be resistant to changing long-held beliefs, but is it right to continue to believe something incorrect? Isn't it worse to modify an 
                             eighty-year-old masterpiece to match a modern cityscape?
                         </p>
-                        <p><i class="fas fa-location"></i> Orignated in: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
+                        <p><i class="fas fa-location"></i> Origin of the Story: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
                     </div>
 
                     <div class="story-cont">
@@ -88,7 +88,7 @@
                             That's how culture evolves. It's like a mud ball rolling down the street of time, picking up whatever it encounters. 
                             Listen to the stories of Pikoy about the legend of Pansol, which connects to the name of our hero, Dr. Jose Rizal, who hails from Calamba.
                         </p>
-                        <p><i class="fas fa-location"></i> Orignated in: <a href="https://www.google.com/maps/place/Pansol,+Calamba,+4027+Laguna/@14.1762206,121.1730162,15.26z/data=!4m6!3m5!1s0x33bd614fc0e251fd:0xc276539e1b0cfbd4!8m2!3d14.1783983!4d121.1840497!16s%2Fg%2F11b6wk3qny?entry=ttu" target="_blank">Pansol Calamba City, Laguna</a></p>
+                        <p><i class="fas fa-location"></i> Origin of the Story: <a href="https://www.google.com/maps/place/Pansol,+Calamba,+4027+Laguna/@14.1762206,121.1730162,15.26z/data=!4m6!3m5!1s0x33bd614fc0e251fd:0xc276539e1b0cfbd4!8m2!3d14.1783983!4d121.1840497!16s%2Fg%2F11b6wk3qny?entry=ttu" target="_blank">Brgy. Pansol Calamba City, Laguna</a></p>
                     </div>
 
                     <div class="story-cont">
@@ -107,7 +107,7 @@
                             <br><br>
                             Overall, these stories are ridiculous and don't make sense. They lack supporting proof and are riddled with discrepancies.
                         </p>
-                        <p><i class="fas fa-location"></i> Orignated in: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
+                        <p><i class="fas fa-location"></i> Origin of the Story: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
                     </div>
                 </div>
                 <div class="side-panel">
