--- a/Assets/Pages/AboutUs.html
+++ b/Assets/Pages/AboutUs.html
@@ -32,18 +32,37 @@
             <section class="aboutus">
                 <h1 class="about-header">ABOUT US</h1>
                 <hr>
-                <p class="about">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua. Egestas diam in arcu cursus 
-                    euismod quis viverra. Nunc lobortis mattis aliquam faucibus purus in massa tempor. 
-                    Amet consectetur adipiscing elit duis tristique sollicitudin. Tortor at auctor 
-                    urna nunc id. Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci nulla. 
-                    Euismod in pellentesque massa placerat. Elementum pulvinar etiam non quam lacus 
-                    suspendisse faucibus. Metus vulputate eu scelerisque felis imperdiet proin fermentum leo. 
-                    Tellus molestie nunc non blandit massa enim nec dui.
-                </p>
+                <br>
+                <div class="ourStory">
+                    <h1>Our Story</h1>
+                    <br>
+                    <p class="about">
+                        Calamba Legacy was founded with the passion to preserve and promote the rich cultural heritage of Calamba City, Laguna. 
+                        Inspired by the city's vibrant history, traditions, and delicacies, we embarked on a journey to document and share Calamba’s 
+                        unique stories with the world.
+                    </p>
+                </div>
+                <br><br><br>
+                <div class="missionVision">
+                    <h1>Mission</h1>
+                    <br>
+                    <p class="mission">
+                        Our mission is to illuminate Calamba's cultural heritage by showcasing its folklore, traditions, culinary delights, 
+                        and historical sites. We aim to inspire a deep appreciation for Calamba’s culture and encourage its preservation for 
+                        future generations.
+                    </p>
+                    <br><br>
+                    <h1>Vision</h1>
+                    <br>
+                    <p class="vision">
+                        We envision Calamba Legacy as the go-to resource for exploring and learning about the city's past and present. 
+                        By fostering a love for Calamba's cultural wealth, we strive to promote its legacy and ensure its stories endure.
+                    </p>
+                </div>
             </section>
 
+            <h1 class="team-header">The Team</h1>
+            <br>
             <section class="team">
                 <div class="members-cont">
                     <div class="member">
@@ -63,7 +82,7 @@
                     </div>
                     <div class="member">
                         <img src="../Images/Members/Tester.jpg" alt="Tester" class="profile">
-                        <p class="name">Railey Dela Pena</p>
+                        <p class="name">Railey Dela Peña</p>
                         <p class="role"><i>Tester/Leader</i></p>
                     </div>
                 </div>
