--- a/Assets/Pages/Explore/HistoricalSites.html
+++ b/Assets/Pages/Explore/HistoricalSites.html
@@ -60,6 +60,8 @@
                             Rizal remembered fondly. Sadly, the original house was destroyed due to a land conflict. The replica we see today was 
                             built in 1950, thanks to donations from schoolchildren.
                         </p>
+                        <p class="loc">Location</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d966.9198567201448!2d121.16651724761292!3d14.213539482144235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd622b6cd9d73f%3A0x1ccad39e6af85d97!2sRizal%20Shrine%2C%20JP%20Rizal%20St%2C%20Calamba%2C%204027%20Laguna!5e0!3m2!1sen!2sph!4v1717653077362!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                     </div>
 
                     <div class="content-div" id="Banga">
@@ -78,6 +80,8 @@
                             you can walk a little to see the house where Dr. Jose P. Rizal, the national hero of the Philippines, lived. 
                             It's right next to the clay pot.
                         </p>
+                        <p class="loc">Location</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d483.45864220700497!2d121.16696161686022!3d14.214141247456704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd622b0bdd3d83%3A0xc6a284c052dd4f9a!2sBanga%20Calamba%20City!5e0!3m2!1sen!2sph!4v1717653708999!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                     </div>
 
                     <div class="content-div" id="Church">
@@ -95,6 +99,8 @@
                             You can find the church on the corner of Mercado and JP Rizal Streets, just across from the Rizal Shrine. 
                             It was built in the 19th century, and it's where Jose Rizal was baptized, just a few days after he was born.
                         </p>
+                        <p class="loc">Location</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d483.4596125454613!2d121.16728520274904!3d14.213687247799477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd622b19a6ea0f%3A0xf26792a68591cc01!2sSt.%20John%20the%20Baptist%20Parish!5e0!3m2!1sen!2sph!4v1717653777666!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                     </div>
 
                     <div class="content-div" id="RizalMonument">
@@ -112,6 +118,8 @@
                             world who admire Rizal's ideas and writings. It might even be recognized officially as the tallest Rizal statue 
                             in the world.
                         </p>
+                        <p class="loc">Location</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d483.46182435733516!2d121.16731655382418!3d14.212652337414928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd622b3b2f59e9%3A0x2e3e5972cec62efa!2sRizal%20Monument%20calamba!5e0!3m2!1sen!2sph!4v1717653864164!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                     </div>
                 </div>
                 
