--- a/Assets/Pages/Explore/TraditionFestival.html
+++ b/Assets/Pages/Explore/TraditionFestival.html
@@ -72,6 +72,12 @@
                             and ended on June 19. But in 2023, it was celebrated from June 2 to June 25. That same year, they also started 
                             giving out the Calambagong Bayani Awards to recognize people who have done amazing things in different areas.
                         </p>
+                        <video class="vid" controls>
+                            <source src="../../Videos/Calamba Bayside Integrated School Buhayani 2023 Streetdance Showdown.mp4" type="video/mp4">
+                        </video>
+                        <div class="source-cont">
+                            <p><i>Source: <a href="https://youtu.be/3cKTK_alKS4?si=AlUYUzpxugA66eTP" target="_blank">Youtube</a></i></p>
+                        </div>
                     </div>
                     <div class="content-div" id="PatronSaintIsidore">
                         <img src="../../Images/Explore/SanIsidroLabradorFeast.jpg" alt="" class="content-img">
