--- a/Assets/Pages/Explore/Folklore.html
+++ b/Assets/Pages/Explore/Folklore.html
@@ -70,6 +70,7 @@
                             eighty-year-old masterpiece to match a modern cityscape?
                         </p>
                         <p><i class="fas fa-location"></i> Origin of the Story: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61889.799967814644!2d121.11623160000002!3d14.18818865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd63655ce077d3%3A0x39dd1f59c6edaced!2sCalamba%2C%204027%20Laguna!5e0!3m2!1sen!2sph!4v1717651818379!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                     </div>
 
                     <div class="story-cont">
@@ -89,6 +90,7 @@
                             Listen to the stories of Pikoy about the legend of Pansol, which connects to the name of our hero, Dr. Jose Rizal, who hails from Calamba.
                         </p>
                         <p><i class="fas fa-location"></i> Origin of the Story: <a href="https://www.google.com/maps/place/Pansol,+Calamba,+4027+Laguna/@14.1762206,121.1730162,15.26z/data=!4m6!3m5!1s0x33bd614fc0e251fd:0xc276539e1b0cfbd4!8m2!3d14.1783983!4d121.1840497!16s%2Fg%2F11b6wk3qny?entry=ttu" target="_blank">Brgy. Pansol Calamba City, Laguna</a></p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15473.266745601077!2d121.1730162!3d14.1762206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd614fc0e251fd%3A0xc276539e1b0cfbd4!2sPansol%2C%20Calamba%2C%204027%20Laguna!5e0!3m2!1sen!2sph!4v1717652511203!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                     </div>
 
                     <div class="story-cont">
@@ -108,6 +110,7 @@
                             Overall, these stories are ridiculous and don't make sense. They lack supporting proof and are riddled with discrepancies.
                         </p>
                         <p><i class="fas fa-location"></i> Origin of the Story: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61889.799967814644!2d121.11623160000002!3d14.18818865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd63655ce077d3%3A0x39dd1f59c6edaced!2sCalamba%2C%204027%20Laguna!5e0!3m2!1sen!2sph!4v1717651818379!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                     </div>
                 </div>
                 <div class="side-panel">
