--- a/Assets/Pages/AboutUs.html
+++ b/Assets/Pages/AboutUs.html
@@ -106,16 +106,14 @@
                 </div>
                 <div class="box">
                     <h4>Contact us</h4>
-                    <a href="#"><i class="fas fa-phone"></i> +639123456789</a>
-                    <a href="#"><i class="fas fa-phone"></i> +639987654321</a>
-                    <a href="#"><i class="fas fa-envelope"></i> calambalegacy@gmail.com</a>
+                    <a><i class="fas fa-phone"></i> +639217160712</a>
+                    <a href="mailto: calambalegacy@gmail.com" target="_blank"><i class="fas fa-envelope"></i> calambalegacy@gmail.com</a>
+                    <a href="https://t.me/RaileyDP" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
                 </div>
                 <div class="box">
                     <h4>Follow us</h4>
-                    <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
-                    <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
-                    <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-                    <a href="#"><i class="fab fa-telegram"></i> Telegram</a>
+                    <a href="https://www.facebook.com/profile.php?id=61560562445028" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+                    <a href="https://x.com/CalambaLegacy?t=4ZR1UbogmjV0A0J4YrGEJQ&s=09" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
                 </div>
             </div>
         </footer>
