--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <Section class="banner">
                 <div class="headings">
                     <h1 class="heading">Calamba Legacy</h1>
-                    <h2 class="sub-heading">The Development of Cultural Heritage Mapping for Calamba City Laguna</h2>
+                    <h2 class="sub-heading">Explore the Stories, Traditions, and Flavors of Our Beloved City</h2>
                     <button class="explore-btn"><a href="Assets/Pages/Explore.html">Explore Now &#x2192;</a></button>
                 </div>
             </Section>
@@ -105,16 +105,14 @@
                 </div>
                 <div class="box">
                     <h4>Contact us</h4>
-                    <a href="#"><i class="fas fa-phone"></i> +639123456789</a>
-                    <a href="#"><i class="fas fa-phone"></i> +639987654321</a>
-                    <a href="#"><i class="fas fa-envelope"></i> calambalegacy@gmail.com</a>
+                    <a><i class="fas fa-phone"></i> +639217160712</a>
+                    <a href="mailto: calambalegacy@gmail.com" target="_blank"><i class="fas fa-envelope"></i> calambalegacy@gmail.com</a>
+                    <a href="https://t.me/RaileyDP" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
                 </div>
                 <div class="box">
                     <h4>Follow us</h4>
-                    <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
-                    <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
-                    <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-                    <a href="#"><i class="fab fa-telegram"></i> Telegram</a>
+                    <a href="https://www.facebook.com/profile.php?id=61560562445028" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+                    <a href="https://x.com/CalambaLegacy?t=4ZR1UbogmjV0A0J4YrGEJQ&s=09" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
                 </div>
             </div>
         </footer>
